<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">模式管家</string>
    <string name="routine">日程管理</string>
    <string name="new_routine">新增日程</string>
    <string name="routine_list">日程列表</string>
    <string name="tempMatter">临时事项</string>
    <string name="customProfile">自定义模式</string>
    <string name="setting">软件设置</string>
    <string name="imgMissing">图片加载失败</string>
    <string name="createTempMatter">新建临时事项</string>    
    <string name="editTempMatter">编辑临时事项</string>
    
    <string name="add_profile">新增情景模式</string>
    <string name="edit_profile">编辑情景模式</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="exit">退出</string>
    <string name="help">帮助</string>
    <string name="new_matter">新建事项</string>
    <string name="event">事件详情</string>
    
    <string name="select">请选择</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="tips">温馨提示</string>
    <string name="confirm">确认</string>
    
    <string name="save_ringer_mode_success">已保存当前铃声设置。\n切换回原模式时将使用此设置.</string>
    
    <string name="delete_profile_text">确定要删除该情景模式吗?删除后将无法恢复!</string>
    <string name="delete_profile_success">模式删除成功</string>
    <string name="delete_profile_fail">模式删除失败</string>
    
    <string name="delete_temp_matter_text">确定要删除该临时事项吗?删除后将无法恢复!</string>
    <string name="delete_temp_matter_success">临时事项删除成功</string>
    <string name="delete_temp_matter_fail">临时事项删除失败</string>
    
    <string name="delete_routine_text">确定要删除该日程吗?删除后将无法恢复!</string>
    <string name="delete_routine_success">日程删除成功</string>
    <string name="delete_routine_fail">日程删除失败</string>
    
    <string name="content">内容</string>
    <string name="start">开始</string>
    <string name="end">结束</string>
    <string name="title">标题</string>
    <string name="titleTips">点击此处输入标题</string>
    <string name="explain">说明</string>
    <string name="explainTips">点击此处输入说明</string>
    <string name="selectProfile">选择对应的情景模式</string>
    
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>
    
    <string name="change_to">改变至</string>
    <string name="current_ringtone">当前铃声</string>
    
    <string name="name_not_null">名称不能为空!</string>
    <string name="title_not_null">标题不能为空!</string>
    <string name="profile_not_exist">所选模式不存在!</string>
    <string name="temp_matter_not_exist">所选模式不存在!</string>
    <string name="show_profile_not_exist">模式不存在</string>
    <string name="invalid_time">时间错误,开始时间应早于结束时间!</string>
    <string name="conflict_time">所输入的时间与其它日程冲突!</string>
    <string name="account_not_exist">手机中未保存谷歌账户,新增事项无法写入谷歌日历!</string>
    <string name="weekday_not_selected">未选择从哪一天开始!</string>
    <string name="no_routine">当前没有日程</string>
    <string name="routine_not_exist">所选日程不存在!</string>
    <string name="can_not_delete_using_profile">不能删除正在使用中的模式!</string>
    
    <string name="change_now_confirm_tips">确认切换</string>
    <string name="change_now_confirm_text1">检测到当前发生事件</string>
    <string name="change_now_confirm_text2">是否立即切换至模式</string>
    <string name="change_now_confirm_text3">选择否则取消该事件的切换</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="start_changing">开始模式切换</string>
    <string name="stop_changing">停止模式切换</string>
    
    <string name="notification_text_1">将在</string>
    <string name="notification_text_2">后切换到模式</string>
    <string name="notification_text_3">点击进入详情</string>
    <string name="notification_text_4">后切换回到原模式</string>
    <string name="notification_text_5">模式切换预告</string>
    
    <string name="change_profile_text_1">模式切换</string>
    <string name="change_profile_text_2">已切换至模式</string>
    <string name="change_profile_text_3">已切换回原模式</string>
    
    <string name="save_ringer_mode">保存当前铃声设置</string>
    
    <string name="send_message_title">快捷回复</string>
    <string name="send_message_content">发现未接来电，是否使用快捷回复功能？确认将进入短信编辑页面。</string>
    <string name="message_shortcut_enable_on">来电快捷操作已开启</string>
    <string name="message_shortcut_enable_off">来电快捷操作已关闭</string>
    
    <string name="import_calendar">从手机本地日历导入</string>
    <string name="error_no_calendar_account">未找到可用的日历账户，请添加账户后再使用本功能</string>
    <string name="string_import">导入</string>
    <string name="calendar">日历</string>
    <string name="import_calendar_explain">选择区间:开始日期0点~结束日期24点</string>
    <string name="import_selection_error">区间或日历地址错误，请重试</string>
    <string name="import_selection_no_events">该日历在该时间段内无事件，请重新选择</string>
    <string name="import_failed">抱歉，导入失败，请重试</string>
    <string name="import_successful">所选事件已成功导入临时事项</string>
    <string name="loading">加载中</string>
    <string name="string_select">选择</string>
    <string name="loading_calendar_events">正在载入所选日历事件，请稍后！</string>
    <string name="error_no_selected_item">尚未选择事件，无法导入！</string>
    <string name="break_line">&#160;~&#160;</string>
    
    <string name="user_help">使用说明</string>
    <string name="user_help_1">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;本软件可以帮助您管理日程，自动地切换模式，避免不必要的烦恼和尴尬。</string>
    <string name="user_help_2">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;在主界面中，点击日历可以快捷进入对应天的临时事项，可以选择菜单项保存当前的模式，作为从自定义模式中切换回来时的模式。</string>
    <string name="user_help_3">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;在自定义模式选项中，您可以根据需要自建模式，然后就可在创建事件时方便的使用。</string>
    <string name="user_help_4">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;日程是指循环往复的常规事件，如课表、每天固定上下班时间等。在日程管理中，选择菜单中的日程列表可以查看当天所有的日程。</string>
    <string name="user_help_5">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;临时事项是指只进行一次的事件，如加班、突发事件等。临时事项界面中，点击日历选择日期，左右滑动可切至上/下一个月，长按日期可快捷新建事项。</string>
    <string name="user_help_6">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;建立事件后，在设置中开启切换，就可享受模式自动切换了。</string>
</resources>
