<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/setting"/>
    
    <item
        android:id="@+id/action_exit"
        android:icon="@android:drawable/ic_lock_power_off"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/exit"/>
    
    <item android:id="@+id/action_help"
        android:icon="@drawable/help"
        android:orderInCategory="102"
        android:showAsAction="always"
        android:title="@string/help"/> 
        
    <item android:id="@+id/action_save_ringer_mode"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/save_ringer_mode"/>

</menu>