<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/new_temp_matter_item_height"
            android:layout_marginLeft="@dimen/new_temp_matter_item_tips_horizonal_margin"
            android:layout_marginRight="@dimen/new_temp_matter_item_tips_horizonal_margin"
            android:gravity="center_vertical"
            android:text="@string/title"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/new_temp_matter_item_tips_text_size" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/new_temp_matter_item_height"
            android:layout_toRightOf="@id/tv_title"
            android:background="@null"
            android:hint="@string/titleTips"
            android:inputType="text" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/parting_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/new_temp_matter_time_picker_margin_top" >

        <TextView
            android:id="@+id/tv_start"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/new_temp_matter_item_height"
            android:layout_marginLeft="@dimen/new_temp_matter_item_tips_horizonal_margin"
            android:layout_marginRight="@dimen/new_temp_matter_item_tips_horizonal_margin"
            android:gravity="center_vertical"
            android:text="@string/start"
            android:textSize="@dimen/new_temp_matter_item_tips_text_size" />

        <edu.tongji.sse.profileexpert.control.MyDateSpinner
            android:id="@+id/Spinner01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_start" />
    </RelativeLayout>

</LinearLayout>